PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.4.0RC4

- Core:
  . Fixed bug #78614 (Does not compile with DTRACE anymore).
    (tz at FreeBSD dot org)
  . Fixed bug #78620 (Out of memory error). (cmb, Nikita)

- Pcntl:
  . Fixed bug #77335 (PHP is preventing SIGALRM from specifying SA_RESTART).
    (Nikita)

- MySQLi:
  . Fixed bug #76809 (SSL settings aren't respected when persistent connections 
    are used). (fabiomsouto)

- SimpleXML:
  . Fixed bug #75245 (Don't set content of elements with only whitespaces). 
    (eriklundin)

- Standard:
  . Fixed bug #76859 (stream_get_line skips data if used with data-generating 
    filter). (kkopachev)

03 Oct 2019, PHP 7.4.0RC3

- Core:
  . Fixed bug #78604 (token_get_all() does not properly tokenize FOO<?php with
    short_open_tag=0). (Nikita)

- FFI:
  . Fixed bug #78543 (is_callable() on FFI\CData throws Exception). (cmb)

- GMP:
  . Fixed bug #78574 (broken shared build). (Remi)

- MBString:
  . Fixed bug #78579 (mb_decode_numericentity: args number inconsistency).
    (cmb)
  . Fixed bug #78609 (mb_check_encoding() no longer supports stringable
    objects). (cmb)

- OpenSSL:
  . Changed the default config path (Windows only). (cmb)

- Session:
  . Fixed bug #78624 (session_gc return value for user defined session 
    handlers). (bshaffer)

- Standard:
  . Fixed bug #78549 (Stack overflow due to nested serialized input). (Nikita)

19 Sep 2019, PHP 7.4.0RC2

- Core:
  . Fixed incorrect usage of QM_ASSIGN instruction. It must not return IS_VAR.
    As a side effect, this allowed passing left hand list() "by reference",
    instead of compile-time error. (Dmitry)
  . Fixed bug #78531 (Crash when using undefined variable as object). (Dmitry)
  . Fixed bug #78535 (auto_detect_line_endings value not parsed as bool).
    (bugreportuser)

- FFI: