@@ -6,6 +6,8 @@ PHP                                                                        NEWS
   . Fixed bug #78614 (Does not compile with DTRACE anymore).
     (tz at FreeBSD dot org)
   . Fixed bug #78620 (Out of memory error). (cmb, Nikita)
+  . Fixed bug #78632 (method_exists() in php74 works differently from php73 in
+    checking priv. methods). (Nikita)
 
 - Pcntl:
   . Fixed bug #77335 (PHP is preventing SIGALRM from specifying SA_RESTART).
